--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2332,7 +2332,7 @@
                                       <div class="_1ouw2w0">
                                         <label class="atm_9s_1txwivl dir dir-ltr" for="unread">
                                           <span class="_10ndlvp">
-                                            <input id="unread" name="Unread" class="_1yf4i4f" type="checkbox">
+                                            <input id="unread" name="Unread" class="checkbox__input" type="checkbox">
                                             <span class="_41yoza" data-checkbox="true"></span>
                                           </span>
                                           <span class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
@@ -2345,7 +2345,7 @@
                                       <div class="_1ouw2w0">
                                         <label class="atm_9s_1txwivl dir dir-ltr"  for="starred">
                                           <span class="_10ndlvp">
-                                            <input id="starred" name="Starred" class="_1yf4i4f" type="checkbox">
+                                            <input id="starred" name="Starred" class="checkbox__input" type="checkbox">
                                             <span class="_41yoza" data-checkbox="true"></span>
                                           </span>
                                           <span class="atm_bx_1ltc5j7 atm_c8_exq1xd atm_g3_1pezo5y atm_7l_18pqv07 atm_h3_yh40bf atm_gz_exct8b dir dir-ltr">
@@ -2441,7 +2441,7 @@
                                                               class="_10ndlvp"><input id="3745068"
                                                                   aria-label="Cooking Deep Fried Bright Orange Battered Eggs"
                                                                   name="Cooking Deep Fried Bright Orange Battered Eggs"
-                                                                  class="_1yf4i4f" type="checkbox"><span
+                                                                  class="checkbox__input" type="checkbox"><span
                                                                   class="_41yoza"
                                                                   data-checkbox="true"></span></span><img
                                                               src="https://a0.muscache.com/im/pictures/lombard/MtTemplate-3745068-media_library/original/c912cb91-6f94-4ef9-9d4e-fb310020e9e7.jpeg?aki_policy=small"
