--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -683,7 +683,7 @@
                                                   ><input
                                                     id="feedback-secondary-options-CheckboxFieldGroup-instructions_did_not_work"
                                                     name="instructions_did_not_work"
-                                                    class="_smt4n2a"
+                                                    class="checkbox__input"
                                                     type="checkbox" /><span
                                                     class="_1v5cvwv4"
                                                     data-checkbox="true"
@@ -727,7 +727,7 @@
                                                   ><input
                                                     id="feedback-secondary-options-CheckboxFieldGroup-did_not_find_answer"
                                                     name="did_not_find_answer"
-                                                    class="_1yf4i4f"
+                                                    class="checkbox__input"
                                                     type="checkbox" /><span
                                                     class="_41yoza"
                                                     data-checkbox="true"
@@ -751,7 +751,7 @@
                                                   ><input
                                                     id="feedback-secondary-options-CheckboxFieldGroup-info_confusing_or_unclear"
                                                     name="info_confusing_or_unclear"
-                                                    class="_1yf4i4f"
+                                                    class="checkbox__input"
                                                     type="checkbox" /><span
                                                     class="_41yoza"
                                                     data-checkbox="true"
@@ -775,7 +775,7 @@
                                                   ><input
                                                     id="feedback-secondary-options-CheckboxFieldGroup-something_else"
                                                     name="something_else"
-                                                    class="_1yf4i4f"
+                                                    class="checkbox__input"
                                                     type="checkbox" /><span
                                                     class="_41yoza"
                                                     data-checkbox="true"
