--- a/topic.html
+++ b/topic.html
@@ -2365,7 +2365,7 @@
                         <label for="filter-checkbox-ARTICLES">
                           <div class="inline-block" style="margin-right: 16px;">
                             <span class="_10ndlvp">
-                              <input id="filter-checkbox-ARTICLES" name="filter-checkbox-ARTICLES" class="_1yf4i4f" type="checkbox" value="ARTICLES">
+                              <input id="filter-checkbox-ARTICLES" name="filter-checkbox-ARTICLES" class="checkbox__input" type="checkbox" value="ARTICLES">
                               <span class="_1v5cvwv4" data-checkbox="true">
                                 <span class="_1oj8hra">
                                   <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 4; overflow: visible;">
@@ -2382,7 +2382,7 @@
                         <label for="filter-checkbox-VIDEOS">
                           <div class="inline-block" style="margin-right: 16px;">
                             <span class="_10ndlvp">
-                              <input id="filter-checkbox-VIDEOS" name="filter-checkbox-VIDEOS" class="_1yf4i4f" type="checkbox" value="VIDEOS">
+                              <input id="filter-checkbox-VIDEOS" name="filter-checkbox-VIDEOS" class="checkbox__input" type="checkbox" value="VIDEOS">
                               <span class="_41yoza" data-checkbox="true"></span>
                             </span>
                           </div>
