--- a/listings-product/explore-where.html
+++ b/listings-product/explore-where.html
@@ -537,7 +537,7 @@
                                                       >
                                                     </div>
                                                     <div
-                                                      class="d10ugdmb dir dir-ltr"
+                                                      class="flex dir dir-ltr"
                                                     >
                                                       <div
                                                         class="d1i8eay0 dir dir-ltr"
