--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2330,7 +2330,7 @@
                                   <div class="_1byskwn">
                                     <div class="_1s1qfkt6">
                                       <div class="_1ouw2w0">
-                                        <label class="atm_9s_1txwivl dir dir-ltr" for="unread">
+                                        <label class="flex dir dir-ltr" for="unread">
                                           <span class="_10ndlvp">
                                             <input id="unread" name="Unread" class="checkbox__input" type="checkbox">
                                             <span class="_41yoza" data-checkbox="true"></span>
@@ -2343,7 +2343,7 @@
                                     </div>
                                     <div class="_1s1qfkt6">
                                       <div class="_1ouw2w0">
-                                        <label class="atm_9s_1txwivl dir dir-ltr"  for="starred">
+                                        <label class="flex dir dir-ltr"  for="starred">
                                           <span class="_10ndlvp">
                                             <input id="starred" name="Starred" class="checkbox__input" type="checkbox">
                                             <span class="_41yoza" data-checkbox="true"></span>
