--- a/searching-and-booking.html
+++ b/searching-and-booking.html
@@ -17,7 +17,7 @@
                 <div class="h7ta1ht dir dir-ltr">
                   <div class="cil4dqc dir dir-ltr">
                     <div class="l714px3 dir dir-ltr">
-                      <div class="c17y9q74 dir dir-ltr">
+                      <div class="flex dir dir-ltr">
                         <div class="l1lvrv3w dir dir-ltr">
                           <a
                             aria-label="Airbnb homepage"
