--- a/searching-for-stays.html
+++ b/searching-for-stays.html
@@ -17,7 +17,7 @@
                 <div class="h7ta1ht dir dir-ltr">
                   <div class="cil4dqc dir dir-ltr">
                     <div class="l714px3 dir dir-ltr">
-                      <div class="c17y9q74 dir dir-ltr">
+                      <div class="flex dir dir-ltr">
                         <div class="l1lvrv3w dir dir-ltr">
                           <a
                             aria-label="Airbnb homepage"
@@ -537,7 +537,7 @@
                                     </div>
                                   </div>
                                   <div class="c123j3p3 dir dir-ltr">
-                                    <div class="caoewxn c1gk634l dir dir-ltr">
+                                    <div class="flex c1gk634l dir dir-ltr">
                                       <div class="i1cqlwxc dir dir-ltr">
                                         <svg
                                           viewBox="0 0 32 32"
@@ -677,7 +677,7 @@
                                             </legend>
                                             <div class="ocd8a5j dir dir-ltr">
                                               <label
-                                                class="atm_9s_1txwivl dir dir-ltr"
+                                                class="flex dir dir-ltr"
                                                 for="feedback-secondary-options-CheckboxFieldGroup-instructions_did_not_work"
                                                 ><span class="_10ndlvp"
                                                   ><input
@@ -721,7 +721,7 @@
                                             </div>
                                             <div class="ocd8a5j dir dir-ltr">
                                               <label
-                                                class="atm_9s_1txwivl dir dir-ltr"
+                                                class="flex dir dir-ltr"
                                                 for="feedback-secondary-options-CheckboxFieldGroup-did_not_find_answer"
                                                 ><span class="_10ndlvp"
                                                   ><input
@@ -745,7 +745,7 @@
                                             </div>
                                             <div class="ocd8a5j dir dir-ltr">
                                               <label
-                                                class="atm_9s_1txwivl dir dir-ltr"
+                                                class="flex dir dir-ltr"
                                                 for="feedback-secondary-options-CheckboxFieldGroup-info_confusing_or_unclear"
                                                 ><span class="_10ndlvp"
                                                   ><input
@@ -769,7 +769,7 @@
                                             </div>
                                             <div class="ocd8a5j dir dir-ltr">
                                               <label
-                                                class="atm_9s_1txwivl dir dir-ltr"
+                                                class="flex dir dir-ltr"
                                                 for="feedback-secondary-options-CheckboxFieldGroup-something_else"
                                                 ><span class="_10ndlvp"
                                                   ><input
