--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2262,7 +2262,7 @@
           <div class="_z4lmgp">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="_z4lmgp">
-              <div role="dialog" aria-label="Filter messages" aria-modal="true" class="_1ucy1zjv" style="position: relative;">
+              <div role="dialog" aria-label="Filter messages" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative;">
                 <div class="_pa35zs">
                   <button aria-label="Close" type="button" class="_oda838" id="show-filter-modal__close">
                     <span class="relative">
@@ -2397,7 +2397,7 @@
           <div class="_z4lmgp">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
             <div class="_z4lmgp">
-              <div role="dialog" aria-label="Filter by Experiences" aria-modal="true" class="_njcq40o" style="position: relative;">
+              <div role="dialog" aria-label="Filter by Experiences" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative;">
                 <div class="_pa35zs">
                   <button aria-label="Back" type="button" class="_oda838" id="show-filter-experience-modal__close">
                     <span class="relative">
