--- a/messaging/inbox.html
+++ b/messaging/inbox.html
@@ -2259,9 +2259,9 @@
       <div class="_1t0jy5tw"></div>
       <section>
         <div class="_vxvq8x" data-testid="modal-container">
-          <div class="_z4lmgp">
+          <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="_z4lmgp">
+            <div class="contents">
               <div role="dialog" aria-label="Filter messages" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative;">
                 <div class="_pa35zs">
                   <button aria-label="Close" type="button" class="_oda838" id="show-filter-modal__close">
@@ -2273,7 +2273,7 @@
                     </span>
                   </button>
                 </div>
-                <div class="_z4lmgp" style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
+                <div class="contents" style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
                   <header class="_q8mwh4">
                     <div class="_1jqox1a"></div>
                     <div class="_1s09xaf">
@@ -2394,9 +2394,9 @@
       <div class="_1t0jy5tw"></div>
       <section>
         <div class="_vxvq8x" data-testid="modal-container">
-          <div class="_z4lmgp">
+          <div class="contents">
             <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-            <div class="_z4lmgp">
+            <div class="contents">
               <div role="dialog" aria-label="Filter by Experiences" aria-modal="true" class="modal-dialog__content-wrapper" style="position: relative;">
                 <div class="_pa35zs">
                   <button aria-label="Back" type="button" class="_oda838" id="show-filter-experience-modal__close">
@@ -2409,7 +2409,7 @@
                     </span>
                   </button>
                 </div>
-                <div class="_z4lmgp" style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
+                <div class="contents" style="--gp-padding-xsmallAndAbove:24px; --gp-padding-smallAndAbove:24px; --gp-padding-mediumAndAbove:24px; --gp-padding-mediumPlusAndAbove:24px; --gp-padding-largeAndAbove:24px; --gp-padding-xlargeAndAbove:24px;">
                   <header class="_q8mwh4">
                     <div class="_1jqox1a"></div>
                     <div class="_1s09xaf">
