--- a/topic.html
+++ b/topic.html
@@ -2354,9 +2354,9 @@
       <div class="_ybk1kl0"></div>
         <section>
           <div class="_g2ext" data-testid="modal-container">
-            <div class="_z4lmgp">
+            <div class="contents">
               <div class="_b21f4g" aria-hidden="true" tabindex="0"></div>
-              <div class="_z4lmgp">
+              <div class="contents">
                 <div role="dialog" aria-label="Content type filters" aria-modal="true" class="_ewwxwe" tabindex="-1"
                     style="position: absolute; bottom: 553.547px; left: 315px; transform-origin: left bottom;">
                   <div style="margin-top: 8px;">
