--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -1275,7 +1275,7 @@
                                                   </svg></div>
                                                 <div class="_1n9nq7g">
                                                   <div class="_hgs47m">
-                                                    <div class="_n5lh69r">
+                                                    <div class="va-top-h">
                                                       <div class="_121z06r2"><span tabindex="-1">We can't send a code to
                                                           this phone number. Try using a different one.</span></div>
                                                     </div>
@@ -4655,7 +4655,7 @@
                                                 </svg></div>
                                               <div class="_1n9nq7g">
                                                 <div class="_hgs47m">
-                                                  <div class="_n5lh69r">
+                                                  <div class="va-top-h">
                                                     <div class="_121z06r2"><span tabindex="-1">We can't send a code to
                                                         this phone number. Try using a different one.</span></div>
                                                   </div>
@@ -4672,7 +4672,7 @@
                                                 </svg></div>
                                               <div class="_1n9nq7g">
                                                 <div class="_hgs47m">
-                                                  <div class="_n5lh69r">
+                                                  <div class="va-top-h">
                                                     <div class="_121z06r2"><span tabindex="-1">You’ve reached the max
                                                         confirmation attempts. Try again in 1 hour.</span></div>
                                                   </div>
