--- a/ticket-selection.html
+++ b/ticket-selection.html
@@ -344,7 +344,7 @@
                                 <div class="_bd0wsyx">
                                   <section>
                                     <div class="_hgs47m">
-                                      <div class="_n5lh69r">
+                                      <div class="va-top-h">
                                         <div style="margin-bottom: 0px">
                                           <h1
                                             tabindex="-1"
@@ -363,7 +363,7 @@
                                     <div style="margin-bottom: 32px"></div>
                                     <section>
                                       <div class="_hgs47m">
-                                        <div class="_n5lh69r">
+                                        <div class="va-top-h">
                                           <div style="margin-bottom: 8px">
                                             <h2
                                               tabindex="-1"
@@ -577,7 +577,7 @@
                                 <div class="_3zx37fj">
                                   <section>
                                     <div class="_hgs47m">
-                                      <div class="_n5lh69r">
+                                      <div class="va-top-h">
                                         <div style="margin-bottom: 16px">
                                           <h1
                                             tabindex="-1"
