--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6472,7 +6472,7 @@
                                   height: 100%;
                                 "
                               >
-                                <img src="../assets/images/map-wishlist.png" alt="" class='w-full'>
+                                <img src="../assets/images/map-wishlist.png" alt="" class='w-full' style='height: 100%; object-fit: cover;'>
                               </div>
                       </section>
                     </main>
