--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <link rel="stylesheet" href="./assets/css/pages.css" />
-  <link rel="stylesheet" href="./messages.css" />
-  <link rel="stylesheet" href="./assets/css/global.css" />
+  <link rel="stylesheet" href="../assets/css/pages.css" />
+  <link rel="stylesheet" href="../assets/css/messages.css" />
+  <link rel="stylesheet" href="../assets/css/global.css" />
   <title>Messages • Airbnb</title>
 </head>
 
@@ -4269,8 +4269,8 @@
     </div>
   </div>
 
-  <script src="./message.js"></script>
-  <script src="./assets/js/components.js"></script>
+  <script src="../assets/js/pages/message.js" defer></script>
+  <script src="../assets/js/components.js"></script>
 </body>
 
 </html>
