add loader in mobile

--- a/loader/messages-loader.html
+++ b/loader/messages-loader.html
@@ -289,7 +289,9 @@
                                     class="_6tvt8jj">Notifications</button></div>
                                 <div class="_wlj5ur" role="tabpanel" id="panel-messages">
                                   <div class="_1xheem">
-                                    <!--  -->
+                                    <span class="ldornx1 dir dir-ltr" style="z-index: 1;">
+                                      <span data-testid="dot-loader" class="_l7ztla black-dots" style="z-index: 1;"><span class="_8od0vn4"></span><span class="_xeg0rs5"></span><span class="_1j74bfux"></span></span>
+                                    </span>
                                   </div>
                                 </div>
                               </div>
