seperate loader.css

--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6473,6 +6473,20 @@
                                 "
                               >
                                 <img src="../assets/images/map-wishlist.png" alt="" class='w-full' style='height: 100%; object-fit: cover;'>
+                                <div class="dir dir-ltr" aria-hidden="false" style="white-space: nowrap; position: absolute; margin-right: 24px; margin-top: 24px; top: 0px; right: 0px; z-index: 1; transition: transform 850ms cubic-bezier(0.25, 1, 0.5, 1) 0s;">
+                                  <div class="c15e4bhw dir dir-ltr" style="width: 40px; flex-direction: column;">
+                                   <button aria-label="Zoom in" data-testid="map/ZoomInButton" type="button" class="cj0q2ib sne7mb7 rp6dtyx t92tojf c1y4i074 dir dir-ltr">
+                                    <svg viewBox="0 0 16 16" height="16" width="16" fill="currentColor" focusable="false">
+                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M7 1a1 1 0 0 1 2 0v14a1 1 0 1 1-2 0V1z"></path>
+                                     <path fill-rule="evenodd" clip-rule="evenodd" d="M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z"></path>
+                                    </svg>
+                                   </button>
+                                   <div class="c1fisx1o dir dir-ltr"></div>
+                                   <button aria-label="Zoom out" data-testid="map/ZoomOutButton" type="button" class="cj0q2ib sne7mb7 rp6dtyx b1d5ierg c1y4i074 dir dir-ltr">
+                                    <svg viewBox="0 0 16 16" height="16" width="16" fill="currentColor" focusable="false"><path fill-rule="evenodd" clip-rule="evenodd" d="M0 8a1 1 0 0 1 1-1h14a1 1 0 1 1 0 2H1a1 1 0 0 1-1-1z"></path></svg>
+                                   </button>
+                                  </div>
+                                 </div>
                               </div>
                       </section>
                     </main>
