--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6,6 +6,7 @@
     <title>1st Wishlist · Wishlists - Airbnb</title>
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/wishlist.css" />
   </head>
   <body class="with-new-header">
     <div id="site-skip-links">
@@ -6473,6 +6474,71 @@
                                 "
                               >
                                 <img src="../assets/images/map-wishlist.png" alt="" class='w-full' style='height: 100%; object-fit: cover;'>
+                                <div class="cezhrh0 dir dir-ltr" aria-hidden="false" style="white-space: nowrap; position: absolute; margin-right: 24px; margin-top: 120px; top: 0px; right: 0px; z-index: 1; transition: transform 850ms cubic-bezier(0.25, 1, 0.5, 1) 0s;">
+                                  <div class="c15e4bhw ctbkggg dir dir-ltr" style="height: 40px; flex-direction: row;">
+                                   <button id="pin-location" aria-label="Add a place to the map" type="button" class="cj0q2ib sne7mb7 rp6dtyx c1y4i074 dir dir-ltr">
+                                    <svg viewBox="0 0 28 28" xmlns="http://www.w3.org/2000/svg" width="24" height="24">
+                                     <path
+                                      d="m16.679 24.988c0.2505-0.2504 0.5642-0.4263 0.9023-0.5319 4.8782-1.5232 8.4188-6.0764 8.4188-11.456 0-6.6274-5.3726-12-12-12-6.6274 0-12 5.3726-12 12 0 5.5372 3.7504 10.198 8.8495 11.582 0.369 0.1001 0.7125 0.2831 0.9828 0.5534l1.6426 1.6427c0.3905 0.3905 1.0237 0.3905 1.4142 0l1.7898-1.7899z"
+                                      clip-rule="evenodd"
+                                      fill="currentColor"
+                                      fill-rule="evenodd"
+                                     ></path>
+                                     <path d="m14.875 7.75v4.375h4.375v1.75h-4.375v4.375h-1.75v-4.375h-4.375v-1.75h4.375v-4.375h1.75z" fill="#fff"></path>
+                                    </svg>
+                                   </button>
+                                  </div>
+                                </div>
+                                <div id="pin-search" class="cv25bqx dir dir-ltr" aria-hidden="false" style="white-space: nowrap; position: absolute; margin-right: 24px; margin-top: 120px; top: 0px; right: 0px; transition: transform 850ms cubic-bezier(0.25, 1, 0.5, 1) 0s;">
+                                  <div class="_1osion16">
+                                   <div>
+                                    <div class="_1lo32iz">
+                                     <div class="_t0tx82">
+                                      <div dir="ltr">
+                                       <label for="Koan-map-poi-search-koan__input">
+                                        <div class="_1kr87ol">
+                                         <div class="_sdqx8w">
+                                          <svg
+                                           viewBox="0 0 32 32"
+                                           xmlns="http://www.w3.org/2000/svg"
+                                           aria-hidden="true"
+                                           role="presentation"
+                                           focusable="false"
+                                           style="display: block; fill: none; height: 12px; width: 12px; stroke: rgb(34, 34, 34); stroke-width: 5.33333; overflow: visible;"
+                                          >
+                                           <g fill="none"><path d="m13 24c6.0751322 0 11-4.9248678 11-11 0-6.07513225-4.9248678-11-11-11-6.07513225 0-11 4.92486775-11 11 0 6.0751322 4.92486775 11 11 11zm8-3 9 9"></path></g>
+                                          </svg>
+                                         </div>
+                                         <input
+                                          class="_1x7zak6"
+                                          aria-autocomplete="list"
+                                          aria-expanded="false"
+                                          autocomplete="off"
+                                          autocorrect="off"
+                                          spellcheck="false"
+                                          id="Koan-map-poi-search-koan__input"
+                                          role="combobox"
+                                          data-veloute="input__Koan-map-poi-search-koan__input"
+                                          name="query"
+                                          placeholder="Find a place or address"
+                                          value=""
+                                         />
+                                         <div class="_dc78on"></div>
+                                        </div>
+                                       </label>
+                                      </div>
+                                     </div>
+                                     <div class="_17kv4a0"><button type="button" class="_u1thwpg" id="cancel-pin">Cancel</button></div>
+                                    </div>
+                                    <div class="_1sjb883">
+                                     <div class="_a38ckr">Add a place to the map</div>
+                                     <div class="_xmpqkp">Find restaurants, landmarks and more. You can add ones you want to visit to the map for reference.</div>
+                                    </div>
+                                    <ul aria-label="Search suggestions" id="Koan-map-poi-search-koan__listbox" class="_11zw87j"></ul>
+                                    <span id="Koan-map-poi-search-koan__description" class="_krjbj">Enter a search term and navigate forward to access suggestions.</span><span aria-atomic="true" aria-live="polite" role="status" class="_krjbj"></span>
+                                   </div>
+                                  </div>
+                                </div>
                                 <div class="dir dir-ltr" aria-hidden="false" style="white-space: nowrap; position: absolute; margin-right: 24px; margin-top: 24px; top: 0px; right: 0px; z-index: 1; transition: transform 850ms cubic-bezier(0.25, 1, 0.5, 1) 0s;">
                                   <div class="c15e4bhw dir dir-ltr" style="width: 40px; flex-direction: column;">
                                    <button aria-label="Zoom in" data-testid="map/ZoomInButton" type="button" class="cj0q2ib sne7mb7 rp6dtyx t92tojf c1y4i074 dir dir-ltr">
@@ -6512,3 +6578,5 @@
     </div>
   </body>
 </html>
+
+<script src="../assets/js/pages/wishlist.js"></script>
