--- a/loader/dashboard-loader.html
+++ b/loader/dashboard-loader.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/loader.css" />
     <title>Experiences Dashboard - Dashboard</title>
     
   </head>
