--- a/loader/wishlist-loader.html
+++ b/loader/wishlist-loader.html
@@ -6,6 +6,7 @@
     <title>1st Wishlist · Wishlists - Airbnb</title>
     <link rel="stylesheet" href="../assets/css/global.css" />
     <link rel="stylesheet" href="../assets/css/pages.css" />
+    <link rel="stylesheet" href="../assets/css/loader.css" />
   </head>
   <body class="with-new-header">
     <div id="site-skip-links">
