fix messages page js files path

--- a/messages.html
+++ b/messages.html
@@ -4268,8 +4268,8 @@
     </div>
   </div>
 
-  <script src="../assets/js/pages/message.js" defer></script>
-  <script src="../assets/js/components.js"></script>
+  <script src="assets/js/pages/message.js" defer></script>
+  <script src="assets/js/components.js"></script>
 </body>
 
 </html>
