fix accessibility missing css

--- a/accessibility.html
+++ b/accessibility.html
@@ -20,8 +20,8 @@
         <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
           data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
           data-testid="AccessibilityLandingPage.NAV_BAR">
-          <nav class="nav-bar">
-            <div class="padding-x-80 dir dir-ltr">
+          <nav class="_1lovwbn">
+            <div class="c1pzwz3g dir dir-ltr">
               <div class="_3zbxjh"><a class="_uavu8q" href="/"><svg viewBox="0 0 1000 1000" role="img"
                     aria-hidden="false" aria-label="Airbnb homepage" focusable="false"
                     style="height:1em;width:1em;display:block;fill:currentColor">
@@ -36,7 +36,7 @@
           <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.HERO" data-component-position="1"
             data-testid="AccessibilityLandingPage.HERO">
-            <div class="padding-x-80 dir dir-ltr">
+            <div class="c1pzwz3g dir dir-ltr">
               <div class="cla6gjt dir dir-ltr">
                 <h1 id="FMP-target" class="tszmtkf dir dir-ltr">Accessibility
                   at Airbnb</h1>
@@ -50,7 +50,7 @@
             <div class="c1fovbcy dir dir-ltr">
               <div class="s15ko7ml dir dir-ltr">
                 <div class="f1fh3g4w dir dir-ltr">
-                  <div class="padding-x-80 dir dir-ltr">
+                  <div class="c1pzwz3g dir dir-ltr">
                     <div class="cpz3lsf dir dir-ltr">
                       <div class="t16md56c dir dir-ltr">
                         <h2 class="h1kxn3z3 dir dir-ltr">Enhanced search filters</h2>
@@ -82,7 +82,7 @@
               </div>
               <div class="s15ko7ml dir dir-ltr">
                 <div class=" dir dir-ltr">
-                  <div class="padding-x-80 dir dir-ltr">
+                  <div class="c1pzwz3g dir dir-ltr">
                     <div class="cpz3lsf dir dir-ltr">
                       <div class="t16md56c dir dir-ltr">
                         <h2 class="h1kxn3z3 dir dir-ltr">Accessibility review</h2>
@@ -113,7 +113,7 @@
               </div>
               <div class="s15ko7ml dir dir-ltr">
                 <div class="f1fh3g4w dir dir-ltr">
-                  <div class="padding-x-80 dir dir-ltr">
+                  <div class="c1pzwz3g dir dir-ltr">
                     <div class="cpz3lsf dir dir-ltr">
                       <div class="t16md56c dir dir-ltr">
                         <h2 class="h1kxn3z3 dir dir-ltr" aria-label="One-on-one messaging with Hosts">1:1 messaging with
@@ -149,7 +149,7 @@
             data-tracking-id="AccessibilityLandingPage.PARTNERS" data-component-position="3"
             data-testid="AccessibilityLandingPage.PARTNERS">
             <div class="i1hddmai dir dir-ltr">
-              <div class="padding-x-80 dir dir-ltr">
+              <div class="c1pzwz3g dir dir-ltr">
                 <picture>
                   <source media="(max-width: 320px)"
                     srcset="https://a0.muscache.com/im/pictures/7842a2b0-56e3-419d-ad0f-4dd4d083145c.jpg?im_w=320 1x, https://a0.muscache.com/im/pictures/7842a2b0-56e3-419d-ad0f-4dd4d083145c.jpg?im_w=720 2x, https://a0.muscache.com/im/pictures/7842a2b0-56e3-419d-ad0f-4dd4d083145c.jpg?im_w=960 3x">
@@ -167,7 +167,7 @@
               </div>
             </div>
             <div class="c15qy67f dir dir-ltr">
-              <div class="padding-x-80 dir dir-ltr">
+              <div class="c1pzwz3g dir dir-ltr">
                 <h2 class="t1kuwyxz dir dir-ltr">How we’re making Airbnb more accessible</h2>
                 <div class="t7bz2j2 dir dir-ltr">
                   <div class="account-container__menu-container">
@@ -220,7 +220,7 @@
             data-tracking-id="AccessibilityLandingPage.FAQ" data-component-position="4"
             data-testid="AccessibilityLandingPage.FAQ">
             <div class="s140jfqu dir dir-ltr">
-              <div class="padding-x-80 dir dir-ltr">
+              <div class="c1pzwz3g dir dir-ltr">
                 <div class="c18gwk03 dir dir-ltr">
                   <div class="tqe8ewx dir dir-ltr">
                     <h2 class="tcynl4i dir dir-ltr">We’re here to help</h2>
@@ -394,8 +394,8 @@
           <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
             data-testid="AccessibilityLandingPage.NAV_BAR">
-            <nav class="nav-bar">
-              <div class="padding-x-80 dir dir-ltr">
+            <nav class="_1lovwbn">
+              <div class="c1pzwz3g dir dir-ltr">
                 <div class="_3zbxjh"><a class="_uavu8q" href="/"><svg viewBox="0 0 1000 1000" role="img"
                       aria-hidden="false" aria-label="Airbnb homepage" focusable="false"
                       style="height:1em;width:1em;display:block;fill:currentColor">
@@ -410,7 +410,7 @@
             <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
               data-tracking-id="AccessibilityLandingPage.HERO" data-component-position="1"
               data-testid="AccessibilityLandingPage.HERO">
-              <div class="padding-x-80 dir dir-ltr">
+              <div class="c1pzwz3g dir dir-ltr">
                 <div class="cla6gjt dir dir-ltr">
                   <h1 id="FMP-target" class="tszmtkf dir dir-ltr">Accessibility
                     at Airbnb</h1>
@@ -424,7 +424,7 @@
               <div class="c1fovbcy dir dir-ltr">
                 <div class="s15ko7ml dir dir-ltr">
                   <div class="f1fh3g4w dir dir-ltr">
-                    <div class="padding-x-80 dir dir-ltr">
+                    <div class="c1pzwz3g dir dir-ltr">
                       <div class="account-container__menu-container">
                         <div class="w1julkar dir dir-ltr">
                           <div class="_1y4ibvpm">
@@ -464,7 +464,7 @@
                 </div>
                 <div class="s15ko7ml dir dir-ltr">
                   <div class=" dir dir-ltr">
-                    <div class="padding-x-80 dir dir-ltr">
+                    <div class="c1pzwz3g dir dir-ltr">
                       <div class="account-container__menu-container">
                         <div class="w1julkar w1roww1u dir dir-ltr">
                           <div class="_1y4ibvpm">
@@ -504,7 +504,7 @@
                 </div>
                 <div class="s15ko7ml dir dir-ltr">
                   <div class="f1fh3g4w dir dir-ltr">
-                    <div class="padding-x-80 dir dir-ltr">
+                    <div class="c1pzwz3g dir dir-ltr">
                       <div class="account-container__menu-container">
                         <div class="w1julkar dir dir-ltr">
                           <div class="_1y4ibvpm">
@@ -549,7 +549,7 @@
               data-tracking-id="AccessibilityLandingPage.PARTNERS" data-component-position="3"
               data-testid="AccessibilityLandingPage.PARTNERS">
               <div class="i1hddmai dir dir-ltr">
-                <div class="padding-x-80 dir dir-ltr">
+                <div class="c1pzwz3g dir dir-ltr">
                   <picture>
                     <source media="(max-width: 320px)"
                       srcset="https://a0.muscache.com/im/pictures/2cd1c183-349b-43ee-b38b-007f9423b017.jpg?im_w=320 1x, https://a0.muscache.com/im/pictures/2cd1c183-349b-43ee-b38b-007f9423b017.jpg?im_w=720 2x, https://a0.muscache.com/im/pictures/2cd1c183-349b-43ee-b38b-007f9423b017.jpg?im_w=960 3x">
@@ -567,7 +567,7 @@
                 </div>
               </div>
               <div class="c15qy67f dir dir-ltr">
-                <div class="padding-x-80 dir dir-ltr">
+                <div class="c1pzwz3g dir dir-ltr">
                   <h2 class="t1kuwyxz dir dir-ltr">How we’re making Airbnb
                     more accessible</h2>
                   <div class="t7bz2j2 dir dir-ltr">
@@ -628,7 +628,7 @@
               data-tracking-id="AccessibilityLandingPage.FAQ" data-component-position="4"
               data-testid="AccessibilityLandingPage.FAQ">
               <div class="s140jfqu dir dir-ltr">
-                <div class="padding-x-80 dir dir-ltr">
+                <div class="c1pzwz3g dir dir-ltr">
                   <div class="c18gwk03 dir dir-ltr">
                     <div class="tqe8ewx dir dir-ltr">
                       <h2 class="tcynl4i dir dir-ltr">We’re here to help</h2>
