--- a/accessibility.html
+++ b/accessibility.html
@@ -17,7 +17,7 @@
   <div data-application="true" class="hidden-md">
     <div dir="ltr">
       <div data-theme="" class="t1bgcr6e ">
-        <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+        <div class="initial dir dir-ltr" data-tracking-events="impression"
           data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
           data-testid="AccessibilityLandingPage.NAV_BAR">
           <nav class="_1lovwbn">
@@ -33,7 +33,7 @@
           </nav>
         </div>
         <main>
-          <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+          <div class="initial dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.HERO" data-component-position="1"
             data-testid="AccessibilityLandingPage.HERO">
             <div class="c1pzwz3g dir dir-ltr">
@@ -44,7 +44,7 @@
               </div>
             </div>
           </div>
-          <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+          <div class="initial dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.PRODUCT_FEATURES" data-component-position="2"
             data-testid="AccessibilityLandingPage.PRODUCT_FEATURES">
             <div class="c1fovbcy dir dir-ltr">
@@ -145,7 +145,7 @@
               </div>
             </div>
           </div>
-          <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+          <div class="initial dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.PARTNERS" data-component-position="3"
             data-testid="AccessibilityLandingPage.PARTNERS">
             <div class="i1hddmai dir dir-ltr">
@@ -216,7 +216,7 @@
               </div>
             </div>
           </div>
-          <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+          <div class="initial dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.FAQ" data-component-position="4"
             data-testid="AccessibilityLandingPage.FAQ">
             <div class="s140jfqu dir dir-ltr">
@@ -391,7 +391,7 @@
     <div data-application="true">
       <div dir="ltr">
         <div data-theme="" class="t1bgcr6e ">
-          <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+          <div class="initial dir dir-ltr" data-tracking-events="impression"
             data-tracking-id="AccessibilityLandingPage.NAV_BAR" data-component-position="0"
             data-testid="AccessibilityLandingPage.NAV_BAR">
             <nav class="_1lovwbn">
@@ -407,7 +407,7 @@
             </nav>
           </div>
           <main>
-            <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+            <div class="initial dir dir-ltr" data-tracking-events="impression"
               data-tracking-id="AccessibilityLandingPage.HERO" data-component-position="1"
               data-testid="AccessibilityLandingPage.HERO">
               <div class="c1pzwz3g dir dir-ltr">
@@ -418,7 +418,7 @@
                 </div>
               </div>
             </div>
-            <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+            <div class="initial dir dir-ltr" data-tracking-events="impression"
               data-tracking-id="AccessibilityLandingPage.PRODUCT_FEATURES" data-component-position="2"
               data-testid="AccessibilityLandingPage.PRODUCT_FEATURES">
               <div class="c1fovbcy dir dir-ltr">
@@ -545,7 +545,7 @@
                 </div>
               </div>
             </div>
-            <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+            <div class="initial dir dir-ltr" data-tracking-events="impression"
               data-tracking-id="AccessibilityLandingPage.PARTNERS" data-component-position="3"
               data-testid="AccessibilityLandingPage.PARTNERS">
               <div class="i1hddmai dir dir-ltr">
@@ -624,7 +624,7 @@
                 </div>
               </div>
             </div>
-            <div class="csrtfuq dir dir-ltr" data-tracking-events="impression"
+            <div class="initial dir dir-ltr" data-tracking-events="impression"
               data-tracking-id="AccessibilityLandingPage.FAQ" data-component-position="4"
               data-testid="AccessibilityLandingPage.FAQ">
               <div class="s140jfqu dir dir-ltr">
